# Advent-Of-Code-2020

./: Cargo.toml
Inputs/: test07.txt
Misc/: Cargo.toml
Misc/src/: error.rs  lib.rs
benches/: my_benchmark.rs
day-01/: Cargo.toml
day-01/src/: main.rs
src/: main.rs
src/computer/: computer_error.rs  mod.rs
src/days/: blueprint.rs  day01.rs  day01a.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  mod.rs
src/misc/: error.rs  mod.rs
