[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Sam <a>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
regex = "1.4.2"
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false